--- a/Home/templates/Home/contact.html
+++ b/Home/templates/Home/contact.html
@@ -1,14 +1,64 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
 {% load static %}
-{%block content %}
 
+{% block content %}
 
+<link rel="stylesheet" href="{% static 'css/contact.css' %}">
 
-<h1>this is contact page</h1>
+<section class="contact-info">
+    <div class="container">
+        <h2>Our Contact Information</h2>
+        <div class="row">
+            <div class="contact-item">
+                <div class="contact-icon">
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <h3>Address</h3>
+                <p>Nayabazar<br>Pokhara, Gandaki, 33700</p>
+            </div>
+            <div class="contact-item">
+                <div class="contact-icon">
+                    <i class="fas fa-phone-alt"></i>
+                </div>
+                <h3>Phone</h3>
+                <p>9800000000</p>
+            </div>
+            <div class="contact-item">
+                <div class="contact-icon">
+                    <i class="fas fa-envelope"></i>
+                </div>
+                <h3>Email</h3>
+                <p>ishak@letsgo.com</p>
+            </div>
+        </div>
+    </div>
+</section>
 
+<section class="contact-form">
+    <div class="container">
+        <h2>Get in Touch</h2>
+        <form action="#" method="post">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" class="form-control" required>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" class="form-control" required>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" class="form-control" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Send Message</button>
+        </form>
+    </div>
+</section>
 
-
-
-
-
-{%endblock%}
+{% endblock %}
