--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Welcome to LetsGo</h1>
         <p>Your one-stop solution for all transportation and delivery needs.</p>
-        <a class="btn btn-primary" href="#">Get Started</a>
+        <a class="btn btn-primary" href="{% url 'register' %}">Get Started</a>
     </div>
 </section>
 
