--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-accent ms-4" href="{% url 'login' %}">Join Now</a>
+                        <a class="btn btn-accent ms-4" href="{% url 'register' %}">Join Now</a>
                     </li>
                 </ul>
             </div>
