--- a/templates/register/choose.html
+++ b/templates/register/choose.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    sanjogranabhat123
+<h1>Welcome</h1>
+ <a href="#">Continue as Rider</a>
+ <a href="#">Continue as Passenger</a>
+
+
+ 
+ <a href="{% url 'logout' %}">Logout</a>
+
+
+ <p>You are signed in as {{user.username}}</p>
 </body>
 </html>
