--- a/templates/register/choose.html
+++ b/templates/register/choose.html
@@ -1,20 +1,61 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LetsGo</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/register/choosepage.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
+    
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-custom py-3">
+    <div class="container">
+        <!-- Logo -->
+        <a class="navbar-brand" href="#">
+            <img src="{% static 'image/logo.png' %}" alt="Logo" class="custom-logo">
+        </a>
+        <!-- Toggle button for mobile view -->
+        <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+
+                <li class="nav-item">
+                    <a class="btn btn-accent ms-4" href="{% url 'logout' %}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <h1>Welcome</h1>
+<p>{{user.username}}</p>
  <a href="#">Continue as Rider</a>
  <a href="#">Continue as Passenger</a>
 
 
  
- <a href="{% url 'logout' %}">Logout</a>
 
 
- <p>You are signed in as {{user.username}}</p>
+
+
+
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="{% static 'js/main.js' %}"></script>
+
 </body>
 </html>
+
+
